Fix message textarea overflow

--- a/app/assets/stylesheets/channel-show.scss
+++ b/app/assets/stylesheets/channel-show.scss
@@ -1,5 +1,7 @@
 .channel-show, .home-show {
-  
+  form {
+    overflow: hidden;
+  }
   .channel-show-heading {
     
     margin: 20px;
